--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,7 @@ header .register {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
+  scrollbar-width: none;
 }
 
 .scrolling-wrapper-flexbox::-webkit-scrollbar {
